force-app/main/default/objects/Case/fields/Child_Sports_Health__c.field-meta.xml
<CustomField>
    <fullName>Child_Sports_Health__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Sports &amp; Health</label>
    <referenceTo>Child_Sports_Health__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>