force-app/main/default/objects/Case/fields/Federal__c.field-meta.xml
<CustomField>
    <fullName>Federal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a Federal Account</description>
    <label>Federal</label>
    <type>Checkbox</type>
</CustomField>