force-app/main/default/objects/Case/fields/Project_Score_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Score_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the related Project Score Tracker record that triggered the creation of this Case</description>
    <inlineHelpText>The Project Score Tracker record associated with this case</inlineHelpText>
    <label>Project Score Tracker</label>
    <referenceTo>Project_Score_Tracker__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>